--- a/welcome.html
+++ b/welcome.html
@@ -46,5 +46,6 @@
 </div>
 <!-- Include Scala.js compiled code -->
 <script type="text/javascript" src="./poggle/js/target/scala-2.12/poggle-fastopt.js"></script>
+<script>Scoggle.main(null)</script>
 </body>
 </html>
