--- a/welcome.html
+++ b/welcome.html
@@ -33,6 +33,10 @@
             order: 1;
             margin-left: 40px;
         }
+        .time {
+            display: flex;
+            font-size: 36px;
+        }
     </style>
 </head>
 <body>
